# Zen-Canvas

./: .gitignore  AGENTS.md  README.md  README_en.md  index.html  package-lock.json  package.json  vite.config.ts
electron/: main.ts  preload.cts  preload.ts
scripts/: generateBrandAssets.ps1  rebuildElectronNative.mjs  runPerformanceTest.mjs
src/: App.tsx  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  search.json
src-tauri/src/: app_control.rs  db.rs  dedupe.rs  file_naming.rs  file_ops.rs  ids.rs  lib.rs  main.rs  path_filter.rs  path_identity.rs  recovery.rs  runtime_capabilities.rs  scanner.rs  settings.rs  storage_analyzer.rs  watcher.rs  window_auth.rs
src-tauri/src/ai/: classification.rs  cleanup.rs  debug.rs  mod.rs  ollama.rs  openai_compatible.rs  presets.rs  prompts.rs  provider.rs  registry.rs  schema.rs  settings.rs  trace.rs
src-tauri/src/db/: commands.rs  connection.rs  learning.rs  mod.rs  schema.rs  types.rs
src-tauri/src/db/classification/: builtin_rules.rs  engine.rs  mod.rs  naming.rs
src-tauri/src/db/queries/: files.rs  mod.rs  operations.rs  rules_repo.rs
src-tauri/src/db/tests/: helpers.rs  mod.rs  part1.rs  part2.rs  part3.rs
src-tauri/src/fs_safety/: atomic_move.rs  copy_commit.rs  identity.rs  mod.rs  path_guard.rs  platform_support.rs  source_claim.rs  verified_directory.rs
src-tauri/tests/: ai_provider.rs  classification_status.rs  dedupe.rs  macos_mutation_fail_closed.rs  migrations.rs  native_file_hardening_smoke.rs  settings.rs  storage_analyzer.rs
tests/: appArchitecture.test.ts  appSettings.test.ts  appSettingsRuntime.test.tsx  appShellBehavior.test.ts  appShellV4.test.ts  automationWorkspace.test.tsx  backgroundIndexer.test.ts  backgroundIndexerRuntime.test.ts  browserMockUnsupported.test.ts  (+60 more)
(+136 files in other folders)
