[package]
name = "zen-canvas-tauri"
version = "0.1.40"
edition = "2021"

[lib]
name = "zen_canvas_tauri"
crate-type = ["lib"]

[[bin]]
name = "zen-canvas"
path = "src/main.rs"
required-features = ["desktop-runtime"]

[features]
default = []
ai-debug = []
native-qa = []
desktop-runtime = [
    "tauri/wry",
    "tauri/compression",
    "tauri/common-controls-v6",
    "tauri/macos-private-api",
    "tauri/tray-icon",
    "tauri/image-png",
]

[dependencies]
blake3 = "1"
dirs = "5"
jwalk = "0.8.1"
notify = "8"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.34.0", features = ["bundled"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
sysinfo = "0.32"
tauri = { version = "2", default-features = false, features = ["macos-private-api"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
url = "2"
uuid = { version = "1", features = ["v4", "v7"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.61", features = ["Wdk_Foundation", "Wdk_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
